fix missing border around input field in webkit browser

--- a/app/assets/stylesheets/_browse.scss
+++ b/app/assets/stylesheets/_browse.scss
@@ -9,6 +9,9 @@
             margin: 5px;
         }
         #create_new {
+            margin-left: auto;
+            margin-right: auto;
+            width: 30%;
             padding: 10px;
         }
         #list_existing {
